# WF64

./: .gitignore  Cargo.toml  README.md  get-started.md
docs/: ANS_GAP_ANALYSIS.md  MILESTONES.md  forth_gc_needs.md  getting-started.md  index.md
kernel/: arith.masm  compare.masm  compile.masm  dict.masm  execute.masm  facility.masm  float.masm  fmath.masm  gc.masm  igui.masm  igui_gfx.masm  interp.masm  io.masm  locals.masm  logic.masm  macros.masm  main.masm  memory.masm  number.masm  parse.masm  rstack.masm  runtime_decls.masm  stack.masm  strings.masm  strings_managed.masm
lib/: ans_core_tests.fs  core.f
release/wf64/: README.txt
release/wf64/docs/: ANS_GAP_ANALYSIS.md  MILESTONES.md  forth-reference.md  get-started.md
release/wf64/lib/: core.f
src/: lib.rs  main.rs  runtime.rs
src/gc/: heap.rs  layout.rs  mod.rs
src/igui/: batch.rs  channels.rs  child.rs  cp_exports.rs  crash_view.rs  executor.rs  fconsole.rs  fedit.rs  ledit.rs  log_view.rs  menu.rs  mod.rs  repl_pane.rs  sexp_nav.rs  stack_view.rs  tools_menu.rs  window.rs
src/let_lang/: codegen.rs  mod.rs  parser.rs
src/newfactor/: factor_session.rs
tests/: harness.rs
tests/data/eval/: base_addr.out  base_parse.out  float_literals.in  float_literals.out  hex_prefix_0x.out
tools/: build-release.ps1
